# DualSTT

./: CMakeLists.txt  Readme.md  build-release.ps1  config.txt  index.html
src/: main.cpp
src/audio/: Loopback.cpp  Loopback.h  Microphone.cpp  Microphone.h
src/core/: RingBuffer.h  VAD.h
src/engine/: SherpaEngine.cpp  SherpaEngine.h
src/server/: WebSocketServer.cpp  WebSocketServer.h
